samples/_failures_safe/1761500937_eb1f1a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ea22ba5.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_4ea22ba5.c:149:13: error: expected expression at end of input
  149 |             token.value[1] =
      |             ^~~~~
./samples/SAFE/__tmp_4ea22ba5.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4ea22ba5.c:149:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4ea22ba5.c:149:13: error: expected declaration or statement at end of input
